--- a/css/styles.css
+++ b/css/styles.css
@@ -129,18 +129,13 @@ body {
 .contacts-nav .contact-link {
     display: flex;
     align-items: center;
-
-    fill: var(--primary-text-color);
-}
-
-.contacts-nav .contact-link:hover {
-    fill: var(--accent);
 }
 
 .contact-icon {
     margin-right: 10px;
-}
 
+    fill: currentColor;
+}
 
 /*Hero section*/
 .hero-section {
@@ -405,14 +400,17 @@ body {
     width: 44px;
     height: 44px;
     border-radius: 50%;
-
-    fill: #AFB1B8;
+    color: #AFB1B8;
 
 }
 
 .social-link:hover {
+    color: #FFFFFF;
     background-color:var(--accent);
-    fill: #FFFFFF;
+}
+
+.social-link-icon {
+    fill: currentColor;
 }
 
 .social-links > .item + .item {
@@ -429,11 +427,15 @@ body {
     border-radius: 50%;
 
     background-color: rgba(255, 255, 255, 0.1);
-    fill: #FFFFFF;
+    color: #FFFFFF;
 }
 
 .footer-social-link:hover {
     background-color: var(--accent);
+}
+
+.footer-social-link-icon {
+    fill: currentColor;
 }
 
 /* Clients */
@@ -465,12 +467,16 @@ body {
     border: 1px solid #AFB1B8;
     border-radius: 4px;
 
-    fill: #AFB1B8;
+    color: #AFB1B8;
 }
 
 .client-link:hover {
     border: 1px solid var(--accent);
-    fill: var(--accent);
+    color: var(--accent);
+}
+
+.client-link-icon {
+    fill: currentColor;
 }
 
 /* Footer */
