--- a/css/styles.css
+++ b/css/styles.css
@@ -568,7 +568,8 @@ body {
 }
 
 .footer-copyright {
-    margin: 0;
+    margin-top: 28px;
+    margin-bottom: 0px;
     padding-top: 18px;
     padding-bottom: 21px;
 
@@ -579,6 +580,8 @@ body {
     line-height: 2;
     text-align: center;
     letter-spacing: 0.03em;
+
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 /*Portfolio section */
